# twinscribe

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  crosscheck_verification_framework.md  dual_stream_documentation_spec_v2.md  pyproject.toml
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  verification.yml
docs/: README.md  agent_architecture.md  agent_interfaces_design.md  beads_integration_design.md  comparator_architecture.md  configuration_design.md  data_models_design.md  orchestrator_architecture.md  orchestrator_design.md  static_analysis_design.md
scripts/: install-beads.sh
src/twinscribe/: __init__.py  __main__.py  cli.py  version.py
src/twinscribe/agents/: __init__.py  base.py  comparator.py  comparator_impl.py  documenter.py  stream.py  validator.py
src/twinscribe/analysis/: __init__.py  analyzer.py  ast_analyzer.py  component_discovery.py  default_oracle.py  normalizer.py  null_oracle.py  oracle.py  pycg_analyzer.py  registry.py
src/twinscribe/beads/: __init__.py  client.py  lifecycle.py  manager.py  templates.py  tracker.py
src/twinscribe/config/: __init__.py  environment.py  loader.py  models.py
src/twinscribe/models/: __init__.py  base.py  beads.py  call_graph.py  comparison.py  components.py  convergence.py  documentation.py  feedback.py  output.py  validation.py
src/twinscribe/orchestrator/: __init__.py  checkpoint.py  convergence.py  orchestrator.py  state.py
src/twinscribe/static_analysis/: __init__.py  oracle.py
src/twinscribe/utils/: __init__.py  llm_client.py  metrics.py
src/twinscribe/verification/: __init__.py  base.py  models.py  pipeline.py  scores.py  strategies.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/agents/: __init__.py  test_comparator.py  test_comparator_impl.py  test_response_parsing.py  test_stream.py
tests/beads/: __init__.py  test_beads_lifecycle.py  test_lifecycle.py
tests/config/: test_loader.py  test_models.py
tests/e2e/: __init__.py  test_real_llm.py
tests/fixtures/: __init__.py
tests/fixtures/discrepancies/: __init__.py  call_graph_discrepancies.json  documentation_discrepancies.json  mixed_discrepancies.json
tests/fixtures/llm_responses/: __init__.py  comparator_responses.json  documenter_responses.json  validator_responses.json
tests/fixtures/sample_codebase/: __init__.py  advanced_patterns.py  calculator.py  data_processor.py  main.py  utils_legacy.py
tests/fixtures/sample_codebase/core/: __init__.py  processor.py  validators.py
tests/fixtures/sample_codebase/models/: __init__.py  entities.py
tests/fixtures/sample_codebase/utils/: __init__.py  formatters.py  helpers.py
tests/fixtures/static_analysis/: __init__.py  call_graph_ground_truth.json  pycg_output.json
tests/integration/: __init__.py  test_dual_stream.py  test_orchestrator.py  test_verification_pipeline.py
tests/models/: __init__.py  test_call_graph.py  test_comparison.py  test_components.py  test_convergence.py  test_documentation.py  test_validation.py
tests/static_analysis/: __init__.py  test_ast_analyzer.py  test_component_discovery.py  test_default_oracle.py  test_null_oracle.py  test_oracle.py  test_pycg_analyzer.py
tests/utils/: __init__.py  test_llm_client.py
tests/verification/: __init__.py  conftest.py  test_adversarial_reviewer.py  test_code_reconstructor.py  test_impact_analyzer.py  test_masked_reconstructor.py  test_mutation_detector.py  test_qa_interrogator.py  test_scenario_walkthrough.py  test_test_generator.py  test_verification_pipeline.py  test_verification_scores.py
